--- a/layouts/assets/css/style.css
+++ b/layouts/assets/css/style.css
@@ -593,6 +593,14 @@ body{
   right: 0px;
 }
 
+.left-4{
+  left: 1rem;
+}
+
+.right-4{
+  right: 1rem;
+}
+
 .-right-1{
   right: -0.25rem;
 }
@@ -647,10 +655,6 @@ body{
 
 .left-8{
   left: 2rem;
-}
-
-.left-4{
-  left: 1rem;
 }
 
 .-right-16{
@@ -711,10 +715,6 @@ body{
 
 .top-16{
   top: 4rem;
-}
-
-.right-4{
-  right: 1rem;
 }
 
 .bottom-10{
@@ -845,6 +845,10 @@ body{
   z-index: 40;
 }
 
+.float-left{
+  float: left;
+}
+
 .m-0{
   margin: 0px;
 }
@@ -868,6 +872,11 @@ body{
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-auto{
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .my-6{
@@ -903,11 +912,6 @@ body{
 .-mx-4{
   margin-left: -1rem;
   margin-right: -1rem;
-}
-
-.my-auto{
-  margin-top: auto;
-  margin-bottom: auto;
 }
 
 .mx-0{
@@ -955,6 +959,14 @@ body{
   margin-bottom: 0.5rem;
 }
 
+.ml-7\/2{
+  margin-left: 1.875rem;
+}
+
+.mt-auto{
+  margin-top: auto;
+}
+
 .mr-1{
   margin-right: 0.25rem;
 }
@@ -983,8 +995,44 @@ body{
   margin-left: 1.75rem;
 }
 
-.mt-auto{
-  margin-top: auto;
+.mb-8{
+  margin-bottom: 2rem;
+}
+
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
+}
+
+.mb-15{
+  margin-bottom: 3.75rem;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
+.mt-7{
+  margin-top: 1.75rem;
+}
+
+.mt-12{
+  margin-top: 3rem;
+}
+
+.ml-auto{
+  margin-left: auto;
+}
+
+.mt-5{
+  margin-top: 1.25rem;
 }
 
 .mr-7{
@@ -1007,24 +1055,8 @@ body{
   margin-left: 2rem;
 }
 
-.mb-10{
-  margin-bottom: 2.5rem;
-}
-
-.mb-6{
-  margin-bottom: 1.5rem;
-}
-
-.mb-4{
-  margin-bottom: 1rem;
-}
-
 .mr-0{
   margin-right: 0px;
-}
-
-.mb-5{
-  margin-bottom: 1.25rem;
 }
 
 .ml-0{
@@ -1033,14 +1065,6 @@ body{
 
 .ml-3{
   margin-left: 0.75rem;
-}
-
-.mt-12{
-  margin-top: 3rem;
-}
-
-.ml-auto{
-  margin-left: auto;
 }
 
 .mb-16{
@@ -1091,10 +1115,6 @@ body{
   margin-top: 1.5rem;
 }
 
-.mt-5{
-  margin-top: 1.25rem;
-}
-
 .-mt-4{
   margin-top: -1rem;
 }
@@ -1109,10 +1129,6 @@ body{
 
 .mb-7{
   margin-bottom: 1.75rem;
-}
-
-.mb-8{
-  margin-bottom: 2rem;
 }
 
 .-mt-6{
@@ -1255,6 +1271,14 @@ body{
   margin-right: -1rem;
 }
 
+.mt-15{
+  margin-top: 3.75rem;
+}
+
+.mt-11{
+  margin-top: 2.75rem;
+}
+
 .block{
   display: block;
 }
@@ -1291,6 +1315,10 @@ body{
   display: none;
 }
 
+.h-590{
+  height: 590px;
+}
+
 .h-6{
   height: 1.5rem;
 }
@@ -1319,8 +1347,16 @@ body{
   height: 2rem;
 }
 
+.h-full{
+  height: 100%;
+}
+
 .h-4{
   height: 1rem;
+}
+
+.h-34{
+  height: 2.125rem;
 }
 
 .h-11{
@@ -1331,8 +1367,20 @@ body{
   height: 2.25rem;
 }
 
-.h-full{
-  height: 100%;
+.h-4\/7{
+  height: 17px;
+}
+
+.h-3{
+  height: 0.75rem;
+}
+
+.h-3\.5{
+  height: 0.875rem;
+}
+
+.h-50{
+  height: 3.125rem;
 }
 
 .h-5{
@@ -1389,10 +1437,6 @@ body{
 
 .h-auto{
   height: auto;
-}
-
-.h-3{
-  height: 0.75rem;
 }
 
 .max-h-56{
@@ -1463,6 +1507,18 @@ body{
   width: 1rem;
 }
 
+.w-131{
+  width: 8.188rem;
+}
+
+.w-4\/2{
+  width: 1.125rem;
+}
+
+.w-20{
+  width: 5rem;
+}
+
 .w-10{
   width: 2.5rem;
 }
@@ -1491,8 +1547,20 @@ body{
   width: 1.25rem;
 }
 
-.w-20{
-  width: 5rem;
+.w-73{
+  width: 73px;
+}
+
+.w-3\.5{
+  width: 0.875rem;
+}
+
+.w-214{
+  width: 13.375rem;
+}
+
+.w-32{
+  width: 8rem;
 }
 
 .w-8{
@@ -1523,10 +1591,6 @@ body{
   width: 3.5rem;
 }
 
-.w-32{
-  width: 8rem;
-}
-
 .w-6{
   width: 1.5rem;
 }
@@ -1537,6 +1601,10 @@ body{
 
 .w-12{
   width: 3rem;
+}
+
+.w-141{
+  width: 8.813rem;
 }
 
 .min-w-full{
@@ -1553,6 +1621,10 @@ body{
 
 .max-w-200{
   max-width: 12.5rem;
+}
+
+.max-w-413{
+  max-width: 25.813rem;
 }
 
 .max-w-screen-lg{
@@ -1795,16 +1867,20 @@ body{
   border-radius: 0.375rem;
 }
 
+.rounded-5{
+  border-radius: 5px;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
 .rounded-sm{
   border-radius: 0.125rem;
 }
 
 .rounded-3xl{
   border-radius: 1.5rem;
-}
-
-.rounded-lg{
-  border-radius: 0.5rem;
 }
 
 .rounded-xl{
@@ -1845,16 +1921,20 @@ body{
   border-width: 1px;
 }
 
-.border-2{
-  border-width: 2px;
-}
-
 .border-0{
   border-width: 0px;
 }
 
+.border-2{
+  border-width: 2px;
+}
+
 .border-4{
   border-width: 4px;
+}
+
+.border-b{
+  border-bottom-width: 1px;
 }
 
 .border-t-0{
@@ -1873,6 +1953,21 @@ body{
   border-style: solid;
 }
 
+.border-grey-br{
+  --tw-border-opacity: 1;
+  border-color: rgb(230 230 230 / var(--tw-border-opacity));
+}
+
+.border-white{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-grey-dark{
+  --tw-border-opacity: 1;
+  border-color: rgb(51 51 51 / var(--tw-border-opacity));
+}
+
 .border-gray-200{
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
@@ -1885,11 +1980,6 @@ body{
 
 .border-transparent{
   border-color: transparent;
-}
-
-.border-white{
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-white{
@@ -1936,11 +2026,6 @@ body{
   background-color: rgb(51 51 51 / var(--tw-bg-opacity));
 }
 
-.bg-grey-dial{
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
-}
-
 .bg-red{
   --tw-bg-opacity: 1;
   background-color: rgb(255 64 64 / var(--tw-bg-opacity));
@@ -1949,6 +2034,16 @@ body{
 .bg-grey-ft{
   --tw-bg-opacity: 1;
   background-color: rgb(236 236 236 / var(--tw-bg-opacity));
+}
+
+.bg-grey-dial{
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
+}
+
+.bg-sublue{
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 135 224 / var(--tw-bg-opacity));
 }
 
 .bg-transparent{
@@ -2041,6 +2136,14 @@ body{
   --tw-gradient-to: #1d4ed8;
 }
 
+.bg-70{
+  background-size: 70%;
+}
+
+.bg-contain{
+  background-size: contain;
+}
+
 .bg-cover{
   background-size: cover;
 }
@@ -2049,8 +2152,8 @@ body{
   background-size: auto;
 }
 
-.bg-contain{
-  background-size: contain;
+.bg-50{
+  background-size: 50%;
 }
 
 .bg-center{
@@ -2168,24 +2271,44 @@ body{
   padding-right: 0.75rem;
 }
 
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
 }
 
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-12{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.py-14{
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
+
+.py-15{
+  padding-top: 3.75rem;
+  padding-bottom: 3.75rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .px-5{
@@ -2213,11 +2336,6 @@ body{
   padding-bottom: 1.5rem;
 }
 
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .px-14{
   padding-left: 3.5rem;
   padding-right: 3.5rem;
@@ -2236,11 +2354,6 @@ body{
 .px-8{
   padding-left: 2rem;
   padding-right: 2rem;
-}
-
-.py-12{
-  padding-top: 3rem;
-  padding-bottom: 3rem;
 }
 
 .px-12{
@@ -2290,6 +2403,14 @@ body{
   padding-left: 0.25rem;
 }
 
+.pt-2{
+  padding-top: 0.5rem;
+}
+
+.pb-6\/2{
+  padding-bottom: 0.375rem;
+}
+
 .pr-4{
   padding-right: 1rem;
 }
@@ -2310,16 +2431,32 @@ body{
   padding-top: 0px;
 }
 
+.pl-11{
+  padding-left: 2.75rem;
+}
+
+.pl-3{
+  padding-left: 0.75rem;
+}
+
+.pb-9{
+  padding-bottom: 2.25rem;
+}
+
+.pt-7{
+  padding-top: 1.75rem;
+}
+
+.pb-6{
+  padding-bottom: 1.5rem;
+}
+
 .pl-4{
   padding-left: 1rem;
 }
 
 .pt-12{
   padding-top: 3rem;
-}
-
-.pl-3{
-  padding-left: 0.75rem;
 }
 
 .pr-10{
@@ -2348,10 +2485,6 @@ body{
 
 .pb-0{
   padding-bottom: 0px;
-}
-
-.pb-6{
-  padding-bottom: 1.5rem;
 }
 
 .pr-1{
@@ -2422,8 +2555,24 @@ body{
   padding-top: 3.5rem;
 }
 
-.pt-2{
-  padding-top: 0.5rem;
+.pt-15{
+  padding-top: 3.75rem;
+}
+
+.pb-1{
+  padding-bottom: 0.25rem;
+}
+
+.pl-3\.5{
+  padding-left: 0.875rem;
+}
+
+.pb-8{
+  padding-bottom: 2rem;
+}
+
+.pb-4{
+  padding-bottom: 1rem;
 }
 
 .text-left{
@@ -2472,6 +2621,10 @@ body{
 
 .text-xsm{
   font-size: 0.563rem;
+}
+
+.text-21{
+  font-size: 1.313rem;
 }
 
 .text-xl{
@@ -2583,6 +2736,11 @@ body{
 .text-grey-sub{
   --tw-text-opacity: 1;
   color: rgb(79 79 79 / var(--tw-text-opacity));
+}
+
+.text-sublue{
+  --tw-text-opacity: 1;
+  color: rgb(23 135 224 / var(--tw-text-opacity));
 }
 
 .text-black{
@@ -2703,10 +2861,19 @@ body{
   outline-style: solid;
 }
 
+.outline-0{
+  outline-width: 0px;
+}
+
 .ring-1{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.ring-grey-dark{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(51 51 51 / var(--tw-ring-opacity));
 }
 
 .ring-black{
@@ -2762,12 +2929,20 @@ body{
   transition-property: none;
 }
 
+.duration-200{
+  transition-duration: 200ms;
+}
+
+.duration-300{
+  transition-duration: 300ms;
+}
+
 .duration-150{
   transition-duration: 150ms;
 }
 
-.duration-200{
-  transition-duration: 200ms;
+.ease-in{
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
 .ease-in-out{
@@ -2775,6 +2950,21 @@ body{
 }
 
 /*** Custom styles  ***/
+
+.placeholder\:text-grey-sub::-moz-placeholder{
+  --tw-text-opacity: 1;
+  color: rgb(79 79 79 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-grey-sub:-ms-input-placeholder{
+  --tw-text-opacity: 1;
+  color: rgb(79 79 79 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-grey-sub::placeholder{
+  --tw-text-opacity: 1;
+  color: rgb(79 79 79 / var(--tw-text-opacity));
+}
 
 .before\:pointer-events-none::before{
   content: var(--tw-content);
@@ -2841,6 +3031,11 @@ body{
   content: var(--tw-content);
 }
 
+.after\:pointer-events-none::after{
+  content: var(--tw-content);
+  pointer-events: none;
+}
+
 .after\:absolute::after{
   content: var(--tw-content);
   position: absolute;
@@ -2866,15 +3061,72 @@ body{
   right: 0px;
 }
 
+.after\:-top-1::after{
+  content: var(--tw-content);
+  top: -0.25rem;
+}
+
+.after\:right-4::after{
+  content: var(--tw-content);
+  right: 1rem;
+}
+
 .after\:my-auto::after{
   content: var(--tw-content);
   margin-top: auto;
   margin-bottom: auto;
 }
 
+.after\:h-2\.5::after{
+  content: var(--tw-content);
+  height: 0.625rem;
+}
+
+.after\:h-2::after{
+  content: var(--tw-content);
+  height: 0.5rem;
+}
+
 .after\:w-2::after{
   content: var(--tw-content);
   width: 0.5rem;
+}
+
+.after\:w-2\.5::after{
+  content: var(--tw-content);
+  width: 0.625rem;
+}
+
+.after\:rotate-45::after{
+  content: var(--tw-content);
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.after\:border::after{
+  content: var(--tw-content);
+  border-width: 1px;
+}
+
+.after\:border-t-0::after{
+  content: var(--tw-content);
+  border-top-width: 0px;
+}
+
+.after\:border-l-0::after{
+  content: var(--tw-content);
+  border-left-width: 0px;
+}
+
+.after\:border-solid::after{
+  content: var(--tw-content);
+  border-style: solid;
+}
+
+.after\:border-grey-dark::after{
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-color: rgb(51 51 51 / var(--tw-border-opacity));
 }
 
 .after\:bg-dropb::after{
@@ -2900,6 +3152,40 @@ body{
 .after\:content-\[\'\'\]::after{
   --tw-content: '';
   content: var(--tw-content);
+}
+
+.checked\:border-sublue:checked{
+  --tw-border-opacity: 1;
+  border-color: rgb(23 135 224 / var(--tw-border-opacity));
+}
+
+.checked\:bg-sublue:checked{
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 135 224 / var(--tw-bg-opacity));
+}
+
+.checked\:bg-tick:checked{
+  background-image: url('../images/tick.svg');
+}
+
+.checked\:ring-sublue:checked{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(23 135 224 / var(--tw-ring-opacity));
+}
+
+.hover\:bg-bover:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 104 167 / var(--tw-bg-opacity));
+}
+
+.focus\:border-sublue:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(23 135 224 / var(--tw-border-opacity));
+}
+
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .group:hover .group-hover\:block{
@@ -2933,11 +3219,6 @@ body{
   border-color: rgb(40 49 67 / var(--tw-border-opacity));
 }
 
-.dark .dark\:border-dark-brd{
-  --tw-border-opacity: 1;
-  border-color: rgb(37 45 61 / var(--tw-border-opacity));
-}
-
 .dark .dark\:border-dark-db{
   --tw-border-opacity: 1;
   border-color: rgb(37 45 61 / var(--tw-border-opacity));
@@ -2947,9 +3228,19 @@ body{
   border-color: rgb(23 28 38 / 0.8);
 }
 
+.dark .dark\:border-dark-dial{
+  --tw-border-opacity: 1;
+  border-color: rgb(20 24 32 / var(--tw-border-opacity));
+}
+
 .dark .dark\:bg-dark-body{
   --tw-bg-opacity: 1;
   background-color: rgb(19 24 31 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-dark-cts{
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 28 38 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-dark-head{
@@ -2971,9 +3262,9 @@ body{
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-dark-cts{
+.dark .dark\:bg-dark-ft{
   --tw-bg-opacity: 1;
-  background-color: rgb(23 28 38 / var(--tw-bg-opacity));
+  background-color: rgb(13 16 21 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-dark-dial{
@@ -2981,17 +3272,53 @@ body{
   background-color: rgb(20 24 32 / var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-dark-ft{
-  --tw-bg-opacity: 1;
-  background-color: rgb(13 16 21 / var(--tw-bg-opacity));
-}
-
 .dark .dark\:text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.dark .dark\:ring-white{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
+}
+
+.dark .dark\:placeholder\:text-white::-moz-placeholder{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.dark .dark\:placeholder\:text-white:-ms-input-placeholder{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.dark .dark\:placeholder\:text-white::placeholder{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.dark .dark\:after\:border-white::after{
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .dark .dark\:after\:bg-dropw::after{
   content: var(--tw-content);
   background-image: url('../images/drop-white-icon.svg');
+}
+
+.dark .dark\:checked\:border-white:checked{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.dark .checked\:dark\:bg-sublue:checked{
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 135 224 / var(--tw-bg-opacity));
+}
+
+.dark .checked\:dark\:ring-sublue:checked{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(23 135 224 / var(--tw-ring-opacity));
 }
